# FastApiAssyncDB

./: Dockerfile  README.MD  config.py  docker-compose.yml  jsonplaceholder_requests.py  pyproject.toml
alembic/versions/: 2024_12_08_1407-6eff402751db_initial_migration.py
app/: run.py
app/routers/: views.py
app/templates/: index.html
