[tool.poetry]
name = "pythonprojecttest2"
version = "0.1.0"
description = ""
authors = ["Den <otkrytka-m@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
aiohttp = "^3.11.2"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
jinja2 = "^3.1.4"
python-multipart = "^0.0.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
